Profile Picture Update

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ main {
 .prof1 .profPic{
   height: 500px;
   width: 100%;
-  background-image: url('https://pbs.twimg.com/media/Fq3_dioWwBEAKMw?format=jpg&name=small');
+  background-image: url('https://pbs.twimg.com/media/F92-Yu3XoAApmW1?format=png&name=small');
   background-repeat: no-repeat;
   background-position: center center;
   border-radius: 5px;
