--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ main {
   header + section > i {
     margin-left: 280px;
     font-size: 2rem;
-    color: #000000;
+    color: #c41930;
   }
 
   .profInfo {
